Fixed no found search page. also fixed alignment with business page and resource page etc

--- a/frontend/src/NotFoundPage/NotFound.css
+++ b/frontend/src/NotFoundPage/NotFound.css
@@ -12,17 +12,34 @@
     
     .not-found-header h1{
         font-size: 2.5em;
+        color:  rgb(139, 21, 84);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .not-found-header h2{
+        color:  rgb(139, 21, 84);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
 
     .not-found-header a{
         text-decoration: none;
         font-size: larger;
-        color: #DE3163;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        color:  rgb(139, 21, 84);
     }
 
     .not-found-header a:visited{
         text-decoration: none;
-        color: #DE3163;
+        color:  rgb(139, 21, 84);
     }
     .not-found-header a:hover{
         text-decoration: underline;
