--- a/frontend/src/resourcePage/Resource.css
+++ b/frontend/src/resourcePage/Resource.css
@@ -147,6 +147,7 @@
   background-color: rgb(139, 21, 84);
 
 
+
   /* border-color: white;  */
 }
 
@@ -154,6 +155,7 @@
   box-sizing: border-box;
   height: 35px;
   font-size: 14px;
+  margin-bottom: 2%;
 
 }
 
@@ -301,6 +303,9 @@
   margin-left: 9%;
 }
 
+.mobile-filter-checkbox input{
+  margin-bottom: 5%;
+}
 
 
 }
@@ -331,5 +336,9 @@
     width: 70%;
     margin-top: 5%;
    }
+
+   .mobile-filter-checkbox input{
+    margin-bottom: 5%;
+  }
   
 }
